Lawren's paragraph added
Stil working on this

--- a/Zotero_references.bib
+++ b/Zotero_references.bib
@@ -15,6 +15,23 @@
   keywords = {Fine-scale,Growth forms,Leaf habits,Trade-offs,Trait coordination}
 }
 
+@article{abramsLeafStructuralCharacteristics1990,
+  title = {Leaf Structural Characteristics of 31 Hardwood and Conifer Tree Species in Central {{Wisconsin}}: {{Influence}} of Light Regime and Shade-Tolerance Rank},
+  shorttitle = {Leaf Structural Characteristics of 31 Hardwood and Conifer Tree Species in Central {{Wisconsin}}},
+  author = {Abrams, Marc David and Kubiske, Mark E.},
+  date = {1990-04-01},
+  journaltitle = {Forest Ecology and Management},
+  volume = {31},
+  number = {4},
+  pages = {245--253},
+  issn = {0378-1127},
+  doi = {10.1016/0378-1127(90)90072-J},
+  url = {http://www.scopus.com/inward/record.url?scp=0025255825&partnerID=8YFLogxK},
+  urldate = {2022-02-15},
+  abstract = {Leaf structural characteristics were examined in understory and open-growing individuals of 26 hardwood and five conifer tree species, representing a range of shade-tolerance classes, in central Wisconsin. Sun leaves of open-growing hardwoods generally had greater thickness, specific mass and stomatal density than shaded leaves in the understory. In contrast, the conifer species exhibited few consistent differences in sun-shade needle length and specific leaf mass. Guard-cell length was not consistently different between sun and shade leaves of the hardwood species. Oaks had greater leaf thickness and stomatal density but lower guard-cell lengths compared to other hardwoo. Shade-intolerant hardwood species generally had greater sun- and shade-leaf thickness, specific leaf mass and guard-cell length than more-tolerant species. These differences in hardwood leaves suggest that acclimation to light regime exists for species representing a broad range of tolerances, and that differences in sun-shade leaf structure among species may vary with shade tolerance.},
+  file = {/Users/nidhivinod/Zotero/storage/SSLXZQE4/Leaf Structural Characteristics of 31 Hardwood.pdf}
+}
+
 @online{AcclimationHighIrradiance,
   title = {Acclimation to High Irradiance in Temperate Deciduous Trees in the Field: Changes in Xanthophyll Cycle Pool Size and in Photosynthetic Capacity along a Canopy Light Gradient},
   url = {https://onlinelibrary.wiley.com/doi/epdf/10.1046/j.1365-3040.1998.00364.x},
@@ -1178,6 +1195,20 @@
   file = {/Users/nidhivinod/Zotero/storage/7HIZ94QZ/Blonder et al. - 2020 - Low predictability of energy balance traits and le.pdf;/Users/nidhivinod/Zotero/storage/4T6PB8PD/1365-2435.html}
 }
 
+@article{boardmanComparativePhotosynthesisSun1977,
+  title = {Comparative {{Photosynthesis}} of {{Sun}} and {{Shade Plants}}},
+  author = {Boardman, N K},
+  date = {1977},
+  journaltitle = {Annual Review of Plant Physiology},
+  volume = {28},
+  number = {1},
+  pages = {355--377},
+  doi = {10.1146/annurev.pp.28.060177.002035},
+  url = {https://doi.org/10.1146/annurev.pp.28.060177.002035},
+  urldate = {2022-02-15},
+  annotation = {\_eprint: https://doi.org/10.1146/annurev.pp.28.060177.002035}
+}
+
 @article{bolstad_foliar_1999,
   title = {Foliar Temperature–Respiration Response Functions for Broad-Leaved Tree Species in the Southern {{Appalachians}}},
   author = {Bolstad, Paul V. and Mitchell, Katherine and Vose, James M.},
@@ -1540,6 +1571,14 @@
   keywords = {optimality theory,optimization,stomata,transpiration,water use efficiency},
   annotation = {\_eprint: https://onlinelibrary.wiley.com/doi/pdf/10.1111/nph.12552},
   file = {/Users/nidhivinod/Zotero/storage/EAR5ZSVX/Buckley and Schymanski - 2014 - Stomatal optimisation in relation to atmospheric C.pdf}
+}
+
+@misc{burgessRegressionsLeafTraits2006,
+  title = {Regressions of Leaf Traits},
+  author = {Burgess, Stephen S. O. and Dawson, Todd E. and Burgess, Stephen S. O.},
+  date = {2006},
+  abstract = {Predicting the limits to tree height using statistical},
+  file = {/Users/nidhivinod/Zotero/storage/DNISHEJ2/Burgess et al. - 2006 - regressions of leaf traits.pdf}
 }
 
 @article{burrellSporadicGeneticConnectivity2019,
@@ -4529,6 +4568,17 @@
   keywords = {chemical defence,gas exchange,herbivory,leaf anatomy,leaf morphology,leaf nutrients,optimization,trade-off},
   annotation = {\_eprint: https://onlinelibrary.wiley.com/doi/pdf/10.1046/j.1469-8137.1999.00423.x},
   file = {/Users/nidhivinod/Zotero/storage/829GHCH7/Gutschick - 1999 - Biotic and abiotic consequences of differences in .pdf;/Users/nidhivinod/Zotero/storage/6GKCCUVQ/j.1469-8137.1999.00423.html}
+}
+
+@book{haberlandtPhysiologicalPlantAnatomy1914,
+  title = {Physiological {{Plant Anatomy}}},
+  author = {Haberlandt, Gottlieb},
+  date = {1914},
+  eprint = {TpAxAQAAMAAJ},
+  eprinttype = {googlebooks},
+  publisher = {{Macmillan and Company, limited}},
+  langid = {english},
+  pagetotal = {804}
 }
 
 @article{haddawayEightProblemsLiterature2020,
@@ -11271,6 +11321,19 @@
   file = {/Users/nidhivinod/Zotero/storage/VIZ5GLU6/Saleska et al. - 2016 - Dry-season greening of Amazon forests.pdf;/Users/nidhivinod/Zotero/storage/E365MF6V/nature16457.html}
 }
 
+@article{salisburyCausesEcologicalSignificance1928,
+  title = {On the {{Causes}} and {{Ecological Significance}} of {{Stomatal Frequency}}, with {{Special Reference}} to the {{Woodland Flora}}},
+  author = {Salisbury, E. J.},
+  date = {1928},
+  journaltitle = {Philosophical Transactions of the Royal Society of London. Series B, Containing Papers of a Biological Character},
+  volume = {216},
+  eprint = {92126},
+  eprinttype = {jstor},
+  pages = {1--65},
+  publisher = {{Royal Society}},
+  issn = {0264-3960}
+}
+
 @article{sanchesDifferentialLeafTraits2010,
   title = {Differential Leaf Traits of a Neotropical Tree {{Cariniana}} Legalis ({{Mart}}.) {{Kuntze}} ({{Lecythidaceae}}): Comparing Saplings and Emergent Trees},
   shorttitle = {Differential Leaf Traits of a Neotropical Tree {{Cariniana}} Legalis ({{Mart}}.) {{Kuntze}} ({{Lecythidaceae}})},
@@ -13857,6 +13920,23 @@
   keywords = {drag,leaves,microclimate,morphology,temperature,thermal factors,wind},
   annotation = {\_eprint: https://onlinelibrary.wiley.com/doi/pdf/10.1111/j.1469-8137.2009.02854.x},
   file = {/Users/nidhivinod/Zotero/storage/CZU72SDB/Vogel - 2009 - Leaves in the lowest and highest winds temperatur.pdf;/Users/nidhivinod/Zotero/storage/GN8Q5A38/j.1469-8137.2009.02854.html}
+}
+
+@article{vogelSunLeavesShade1968,
+  title = {"{{Sun Leaves}}" and "{{Shade Leaves}}": {{Differences}} in {{Convective Heat Dissipation}}},
+  shorttitle = {"{{Sun Leaves}}" and "{{Shade Leaves}}"},
+  author = {Vogel, Steven},
+  date = {1968-11},
+  journaltitle = {Ecology},
+  volume = {49},
+  number = {6},
+  pages = {1203--1204},
+  issn = {00129658},
+  doi = {10.2307/1934517},
+  url = {http://doi.wiley.com/10.2307/1934517},
+  urldate = {2020-07-17},
+  langid = {english},
+  file = {/Users/nidhivinod/Zotero/storage/D26NWWKZ/Vogel - 1968 - Sun Leaves and Shade Leaves Differences in Co.pdf}
 }
 
 @article{vogelSunLeavesShade1968a,
