bold citations that need to be inserted

--- a/vertical-thermal-review.Rmd
+++ b/vertical-thermal-review.Rmd
@@ -263,10 +263,10 @@ More recent work has included a focus not only on shade, but also on leaf height
 For example, leaf mass per area (LMA), photosynthetic capacity ($A_{max}$ per area) and $g_s$ have been observed to increase with height, independently of light [@thomasPhotosyntheticDifferencesSaplings2002; @houterOntogeneticChangesLeaf2012; @cavender-baresChangesDroughtResponse2000; @binLeafTraitExpression2022].
 Thus, leaves develop differently throughout the canopy according to the irradiance and hydraulic stress associated with their canopy location, height and evaporative load, with additional potential influences of the ontogenetic stage of the branches [Table `r table_leaf_traits`; @carterExperimentalWarmingTropical2021; @niinemetsResponsesForestTrees2010a; @casasSunShadeLeaves2011;  @keenanGlobalLeafTrait2016; @binLeafTraitExpression2022; @sackHowStrongIntracanopy2006; @chenLeafEconomicsSpectrum2020; **Niinemets et al., 2015a**].
 Plasticity throughout the canopy may emerge during new leaf development with leaves being influenced by information from adjacent mature leaves or apical meristem, including  (e.g., for deciduous species expanding leaves) a “memory” of previous conditions in that location, and may also acclimate during and after expansion to to the current microclimate [@zwienieckiHydraulicLimitationsImposed2004].
-Overall, leaves may optimize their biochemical, anatomical and structural traits according to their light environment and height (cite Niinemets papers on this, as well as Japanese papers on N allocation throughout the canopy). 
-Yet, while these studies have clarified many details of leaf differences throughout the canopy,  no papers have integrated the many differences in leaf traits throughout the canopy in a cohesive framework.
-Within-canopy, leaf traits vary along the vertical light gradient (i.e., sun and shade leaves, @casasSunShadeLeaves2011;  @binLeafTraitExpression2022] at a biochemical, anatomical and structural level [Table `r table_leaf_traits`, @sackHowStrongIntracanopy2006; Niinemets et al., 2015a; @chenLeafEconomicsSpectrum2020]. 
-Much of our understanding of trait coordination is based on the leaf economics spectrum concept developed across diverse species [@wrightWorldwideLeafEconomics2004], using sun leaves [@keenanGlobalLeafTrait2016; @chenLeafEconomicsSpectrum2020], and canopy shade is known to alter these trait relationships (Osnas et al. 2018 PNAS), and thus further research is needed to characterize trait relationships and responses vertically through the full range of canopy microenvironments.
+Overall, leaves may optimize their biochemical, anatomical and structural traits according to their light environment and height (**cite Niinemets papers on this, as well as Japanese papers on N allocation throughout the canopy**). 
+Yet, while these studies have clarified many details of leaf differences throughout the canopy, no papers have integrated the many differences in leaf traits throughout the canopy in a cohesive framework.
+Within-canopy, leaf traits vary along the vertical light gradient (i.e., sun and shade leaves, @casasSunShadeLeaves2011;  @binLeafTraitExpression2022] at a biochemical, anatomical and structural level [Table `r table_leaf_traits`, @sackHowStrongIntracanopy2006; **Niinemets et al., 2015a**; @chenLeafEconomicsSpectrum2020]. 
+Much of our understanding of trait coordination is based on the leaf economics spectrum concept developed across diverse species [@wrightWorldwideLeafEconomics2004], using sun leaves [@keenanGlobalLeafTrait2016; @chenLeafEconomicsSpectrum2020], and canopy shade is known to alter these trait relationships (**Osnas et al. 2018 PNAS**), and thus further research is needed to characterize trait relationships and responses vertically through the full range of canopy microenvironments.
 It has been established that independent of the light environment, traits also vary within species along the ontogenetic trajectory from the understory to the canopy. Therefore, ontogeny is bound to play a role in shaping leaf traits and thermal sensitivity.
 
 <!--older paragph-->
