--- a/vertical-thermal-review.Rmd
+++ b/vertical-thermal-review.Rmd
@@ -257,7 +257,8 @@ However, the opposite trend was observed for a lone tree surrounded by grass in 
 
 ## 3. Leaf traits 
 <!--Lawren's paragraph for R2 comments on having older citations and connecting to newer work-->
-The vertical variation in leaf structure and composition has been long recognized, with sun and shade leaf traits distinguished for more than 100 years [@haberlandtPhysiologicalPlantAnatomy1914; @salisburyCausesEcologicalSignificance1928].
+Leaf traits vary vertically across forest strata at anatomical, structural and biochemical levels [Table `r table_leaf_traits`, @sackHowStrongIntracanopy2006; @niinemetsWorldwideAnalysisWithincanopy2015; @chenLeafEconomicsSpectrum2020], shaping $T_{leaf}$, leaf metabolism, and leaf thermal sensitivity across forest vertical strata [@michaletzPlantThermoregulationEnergetics2015a;@michaletzEnergeticCarbonEconomic2016a;  @zwienieckiHydraulicLimitationsImposed2004]. 
+This vertical variation in leaf structure and composition has been long recognized, with sun and shade leaf traits distinguished for more than 100 years [@haberlandtPhysiologicalPlantAnatomy1914; @salisburyCausesEcologicalSignificance1928].
 Early work attributed differences among leaves to sun versus shade [@wyliePrinciplesFoliarOrganization1951; @vogelSunLeavesShade19688] and this tendency grew given the parallel differences observed as for plants grown in sun versus shade conditions [@boardmanComparativePhotosynthesisSun1977; @abramsLeafStructuralCharacteristics1990].
 More recent work has included a focus not only on shade, but also on leaf height in the canopy as important in determining differences in mature leaf structure and function, as leaf traits may partially mitigate the effects of gravity and hydraulic pathlength that would affect leaves higher up in the canopy  [@sackHowStrongIntracanopy2006; @kochLimitsTreeHeight2004; @burgessRegressionsLeafTraits2006].
 For example, leaf mass per area (LMA), photosynthetic capacity ($A_{max}$ per area) and $g_s$ have been observed to increase with height, independently of light [@thomasPhotosyntheticDifferencesSaplings2002; @houterOntogeneticChangesLeaf2012; @cavender-baresChangesDroughtResponse2000; @binLeafTraitExpression2022].
@@ -265,12 +266,11 @@ Thus, leaves develop differently throughout the canopy according to the irradian
 Plasticity throughout the canopy may emerge during new leaf development with leaves being influenced by information from adjacent mature leaves or apical meristem, including  (e.g., for deciduous species expanding leaves) a “memory” of previous conditions in that location, and may also acclimate during and after expansion to to the current microclimate [@zwienieckiHydraulicLimitationsImposed2004].
 Overall, leaves may optimize their biochemical, anatomical and structural traits according to their light environment and height (**cite Niinemets papers on this, as well as Japanese papers on N allocation throughout the canopy**). 
 Yet, while these studies have clarified many details of leaf differences throughout the canopy, no papers have integrated the many differences in leaf traits throughout the canopy in a cohesive framework.
-Within-canopy, leaf traits vary along the vertical light gradient (i.e., sun and shade leaves, @casasSunShadeLeaves2011;  @binLeafTraitExpression2022] at a biochemical, anatomical and structural level [Table `r table_leaf_traits`, @sackHowStrongIntracanopy2006; **Niinemets et al., 2015a**; @chenLeafEconomicsSpectrum2020]. 
-Much of our understanding of trait coordination is based on the leaf economics spectrum concept developed across diverse species [@wrightWorldwideLeafEconomics2004], using sun leaves [@keenanGlobalLeafTrait2016; @chenLeafEconomicsSpectrum2020], and canopy shade is known to alter these trait relationships (**Osnas et al. 2018 PNAS**), and thus further research is needed to characterize trait relationships and responses vertically through the full range of canopy microenvironments.
+Rather, much of our understanding of trait coordination is based on the leaf economics spectrum concept developed across diverse species [@wrightWorldwideLeafEconomics2004], using sun leaves [@keenanGlobalLeafTrait2016; @chenLeafEconomicsSpectrum2020], and canopy shade is known to alter these trait relationships (**Osnas et al. 2018 PNAS**), and thus further research is needed to characterize trait relationships and responses vertically through the full range of canopy microenvironments.
 It has been established that independent of the light environment, traits also vary within species along the ontogenetic trajectory from the understory to the canopy. Therefore, ontogeny is bound to play a role in shaping leaf traits and thermal sensitivity.
 
 <!--older paragph-->
-Leaf traits vary vertically across forest strata at anatomical, structural and biochemical levels [Table `r table_leaf_traits`, @sackHowStrongIntracanopy2006; @niinemetsWorldwideAnalysisWithincanopy2015; @chenLeafEconomicsSpectrum2020], shaping $T_{leaf}$, leaf metabolism, and leaf thermal sensitivity across forest vertical strata [@michaletzPlantThermoregulationEnergetics2015a;@michaletzEnergeticCarbonEconomic2016a;  @zwienieckiHydraulicLimitationsImposed2004]. 
+
 The primary driver of this variation is the vertical light gradient, with strong differentiation between sun and shade leaves [@casasSunShadeLeaves2011; @binLeafTraitExpression2022].
 Leaf morphology adjusts to the previously experienced microenvironment during leaf formation in buds, and also during ongoing leaf expansion [@zwienieckiHydraulicLimitationsImposed2004], and the ratio of far red to red light and associated water demands determine the differentiation of traits of sun and shade leaves [@casasSunShadeLeaves2011; @zwienieckiHydraulicLimitationsImposed2004; @keenanGlobalLeafTrait2016]. 
 Therefore, a continuum of sun and shade leaves are observed throughout the vertical gradient where upper (or outer) canopy leaves vary dramatically from canopy-interior and understory leaves due to the differences in biophysical conditions (Fig. `r fig_NEON_vertical`), and also because of differences in biological conditions such as tree size and height [@binLeafTraitExpression2022]. 
