--- a/vertical-thermal-review.Rmd
+++ b/vertical-thermal-review.Rmd
@@ -260,27 +260,25 @@ However, the opposite trend was observed for a lone tree surrounded by grass in 
 Leaf traits vary vertically across forest strata at anatomical, structural and biochemical levels [Table `r table_leaf_traits`, @sackHowStrongIntracanopy2006; @niinemetsWorldwideAnalysisWithincanopy2015; @chenLeafEconomicsSpectrum2020], shaping $T_{leaf}$, leaf metabolism, and leaf thermal sensitivity across forest vertical strata [@michaletzPlantThermoregulationEnergetics2015a;@michaletzEnergeticCarbonEconomic2016a;  @zwienieckiHydraulicLimitationsImposed2004]. 
 This vertical variation in leaf structure and composition has been long recognized, with sun and shade leaf traits distinguished for more than 100 years [@haberlandtPhysiologicalPlantAnatomy1914; @salisburyCausesEcologicalSignificance1928].
 Early work attributed differences among leaves to sun versus shade [@wyliePrinciplesFoliarOrganization1951; @vogelSunLeavesShade19688] and this tendency grew given the parallel differences observed as for plants grown in sun versus shade conditions [@boardmanComparativePhotosynthesisSun1977; @abramsLeafStructuralCharacteristics1990].
-More recent work has included a focus not only on shade, but also on leaf height in the canopy as important in determining differences in mature leaf structure and function, as leaf traits may partially mitigate the effects of gravity and hydraulic pathlength that would affect leaves higher up in the canopy  [@sackHowStrongIntracanopy2006; @kochLimitsTreeHeight2004; @burgessRegressionsLeafTraits2006].
+More recent work has included a focus not only on shade, but also on leaf height in the canopy as important in determining differences in mature leaf structure and function, as leaf traits may partially mitigate the effects of gravity and hydraulic pathlength that would affect leaves higher up in the canopy [@sackHowStrongIntracanopy2006; @kochLimitsTreeHeight2004; @burgessRegressionsLeafTraits2006].
 For example, leaf mass per area (LMA), photosynthetic capacity ($A_{max}$ per area) and $g_s$ have been observed to increase with height, independently of light [@thomasPhotosyntheticDifferencesSaplings2002; @houterOntogeneticChangesLeaf2012; @cavender-baresChangesDroughtResponse2000; @binLeafTraitExpression2022].
 Thus, leaves develop differently throughout the canopy according to the irradiance and hydraulic stress associated with their canopy location, height and evaporative load, with additional potential influences of the ontogenetic stage of the branches [Table `r table_leaf_traits`; @carterExperimentalWarmingTropical2021; @niinemetsResponsesForestTrees2010a; @casasSunShadeLeaves2011;  @keenanGlobalLeafTrait2016; @binLeafTraitExpression2022; @sackHowStrongIntracanopy2006; @chenLeafEconomicsSpectrum2020; **Niinemets et al., 2015a**].
 Plasticity throughout the canopy may emerge during new leaf development with leaves being influenced by information from adjacent mature leaves or apical meristem, including  (e.g., for deciduous species expanding leaves) a “memory” of previous conditions in that location, and may also acclimate during and after expansion to to the current microclimate [@zwienieckiHydraulicLimitationsImposed2004].
 Overall, leaves may optimize their biochemical, anatomical and structural traits according to their light environment and height (**cite Niinemets papers on this, as well as Japanese papers on N allocation throughout the canopy**). 
 Yet, while these studies have clarified many details of leaf differences throughout the canopy, no papers have integrated the many differences in leaf traits throughout the canopy in a cohesive framework.
-Rather, much of our understanding of trait coordination is based on the leaf economics spectrum concept developed across diverse species [@wrightWorldwideLeafEconomics2004], using sun leaves [@keenanGlobalLeafTrait2016; @chenLeafEconomicsSpectrum2020], and canopy shade is known to alter these trait relationships (**Osnas et al. 2018 PNAS**), and thus further research is needed to characterize trait relationships and responses vertically through the full range of canopy microenvironments.
-It has been established that independent of the light environment, traits also vary within species along the ontogenetic trajectory from the understory to the canopy.
-Therefore, ontogeny is bound to play a role in shaping leaf traits and thermal sensitivity.
+Rather, much of our understanding of trait coordination is based on the leaf economics spectrum concept developed across diverse species using sun leaves [@wrightWorldwideLeafEconomics2004, @keenanGlobalLeafTrait2016; @chenLeafEconomicsSpectrum2020], and as canopy shade is known to alter these trait relationships (**Osnas et al. 2018 PNAS**), further research is needed to characterize trait relationships and responses vertically through the full range of canopy microenvironments.
 
 <!--older paragph-->
-
-The primary driver of this variation is the vertical light gradient, with strong differentiation between sun and shade leaves [@casasSunShadeLeaves2011; @binLeafTraitExpression2022].
-Leaf morphology adjusts to the previously experienced microenvironment during leaf formation in buds, and also during ongoing leaf expansion [@zwienieckiHydraulicLimitationsImposed2004], and the ratio of far red to red light and associated water demands determine the differentiation of traits of sun and shade leaves [@casasSunShadeLeaves2011; @zwienieckiHydraulicLimitationsImposed2004; @keenanGlobalLeafTrait2016]. 
+~~Leaf traits vary vertically across forest strata at anatomical, structural and biochemical levels [Table `r table_leaf_traits`, @sackHowStrongIntracanopy2006; @niinemetsWorldwideAnalysisWithincanopy2015; @chenLeafEconomicsSpectrum2020], shaping $T_{leaf}$, leaf metabolism, and leaf thermal sensitivity across forest vertical strata [@michaletzPlantThermoregulationEnergetics2015a;@michaletzEnergeticCarbonEconomic2016a;  @zwienieckiHydraulicLimitationsImposed2004].~~
+~~The primary driver of this variation is the vertical light gradient, with strong differentiation between sun and shade leaves [@casasSunShadeLeaves2011; @binLeafTraitExpression2022].~~
+~~Leaf morphology adjusts to the previously experienced microenvironment during leaf formation in buds, and also during ongoing leaf expansion [@zwienieckiHydraulicLimitationsImposed2004], ~~ and the ratio of far red to red light and associated water demands determine the differentiation of traits of sun and shade leaves [@casasSunShadeLeaves2011; @zwienieckiHydraulicLimitationsImposed2004; @keenanGlobalLeafTrait2016]. 
 Therefore, a continuum of sun and shade leaves are observed throughout the vertical gradient where upper (or outer) canopy leaves vary dramatically from canopy-interior and understory leaves due to the differences in biophysical conditions (Fig. `r fig_NEON_vertical`), and also because of differences in biological conditions such as tree size and height [@binLeafTraitExpression2022]. 
-Traits also vary within species along the ontogenetic trajectory from the understory to the upper canopy, independent of the light environment. 
-For example, leaf mass per area (LMA), photosynthetic capacity ($A_{max}$ per area) and $g_s$ have been observed to increase with height, independently of light [@thomasPhotosyntheticDifferencesSaplings2002; @houterOntogeneticChangesLeaf2012; @cavender-baresChangesDroughtResponse2000; @binLeafTraitExpression2022]. 
-Therefore, ontogeny is bound to play a role in shaping leaf traits and thermal sensitivity [@carterExperimentalWarmingTropical2021; @niinemetsResponsesForestTrees2010a].
-Yet, much of our understanding of trait coordination is based on the leaf economics spectrum concept developed across diverse species [@wrightWorldwideLeafEconomics2004], which was developed using sun leaves [@chenLeafEconomicsSpectrum2020; @keenanGlobalLeafTrait2016], and further research is needed to fully characterize trait relationships and responses across the full range of microenvironments spanning the forest vertical gradient. 
+~~Traits also vary within species along the ontogenetic trajectory from the understory to the upper canopy, independent of the light environment.~~ 
+~~For example, leaf mass per area (LMA), photosynthetic capacity ($A_{max}$ per area) and $g_s$ have been observed to increase with height, independently of light [@thomasPhotosyntheticDifferencesSaplings2002; @houterOntogeneticChangesLeaf2012; @cavender-baresChangesDroughtResponse2000; @binLeafTraitExpression2022]. ~~
+~~Therefore, ontogeny is bound to play a role in shaping leaf traits and thermal sensitivity [@carterExperimentalWarmingTropical2021; @niinemetsResponsesForestTrees2010a].~~
+~~Yet, much of our understanding of trait coordination is based on the leaf economics spectrum concept developed across diverse species [@wrightWorldwideLeafEconomics2004], which was developed using sun leaves [@chenLeafEconomicsSpectrum2020; @keenanGlobalLeafTrait2016], and further research is needed to fully characterize trait relationships and responses across the full range of microenvironments spanning the forest vertical gradient.~~ 
 
-Across the vertical gradient, traits vary (1) across sun and shade leaves within individuals, (2) across canopy and understory individuals of the same species, and (3) across canopy and understory species. 
+Across the vertical gradient, traits vary (1) within individuals, with height and across shaded and sunny positions [e.g., @example_within-individual_references], (2) across individuals of the same species, often representing an ontogenetic trajectory from the understory to the canopy [e.g., @carterExperimentalWarmingTropical2021; @niinemetsResponsesForestTrees2010a], and (3) across canopy and understory species [e.g., @example_interspecific_references]. 
 The majority of studies characterizing variation in leaf traits or metabolism examine intraspecific patterns (categories 1 and 2), which are therefore the main focus of this review (Table `r table_leaf_traits`).
 Generally, the pattern of fundamental trait adaptations to light gradients across forest species is similar to within-species trends in traits and sometimes metabolism [@rozendaalPlasticityLeafTraits2006; @thomasPhotosyntheticDifferencesSaplings2002; @houterOntogeneticChangesLeaf2012; @binLeafTraitExpression2022; @cavaleri_height_2010; @lloydOptimisationPhotosyntheticCarbon2010]; however, vertical trends vary across trees [@lloydOptimisationPhotosyntheticCarbon2010], and counter-gradient variation can exist [e.g., @luskWhyAreEvergreen2008].
 Overall, when it comes to understanding and modeling forest ecosystem function, many leaf physiological parameters can be estimated based on foliage height profiles [e.g., @cavaleri_height_2010; @lloydOptimisationPhotosyntheticCarbon2010].
